Corrected table column alignment.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -21,6 +21,18 @@
 @import 'modules/util/_grid.less';
 @import 'modules/util/_util.less';
 
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+th {
+  text-align: left;
+}
+
 .panel {
 
   .alert {
